fixing gap in iphone SE view port.
fixing gap in iphone SE view port.

--- a/css/custom.css
+++ b/css/custom.css
@@ -95,7 +95,7 @@ and open the template in the editor.
     }
     div.sticky {
         border: 0px solid #000;
-        top: 57px!important;
+        top: 62px!important;
         left: 0px!important;
         padding-left: 0px!important;
     }
